- Fixed bug #43831 ($this gets mangled when extending PDO with persistent connection) - Fixed bug #45432 (PDO: persistent connection leak)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@275721 c90b9560-bf6c-de11-be94-00142212c4b1